<resources>
    <string name="app_name">BreadMardira</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_logout">Logout</string>
    <string name="title_management">Product Management</string>
    <string name="title_orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>