<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gity.breadmardira.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <!-- Action ke detailProductFragment; ID action ini menentukan nama method SafeArgs -->
        <action
            android:id="@+id/action_navigation_home_to_detailProductFragment"
            app:destination="@id/detailProductFragment" />
    </fragment>

<!--  Add Cart Fragment  -->
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.gity.breadmardira.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gity.breadmardira.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/detailProductFragment"
        android:name="com.gity.breadmardira.ui.home.detailProduct.DetailProductFragment"
        android:label="Detail Produk"
        tools:layout="@layout/fragment_detail_product">
        <argument
            android:name="product"
            app:argType="com.gity.breadmardira.model.Product" />
    </fragment>

</navigation>